<resources>
  <string name="app_name">Wi De Ya</string>
  <string name="app_name_dev">Wi De Ya (DEV)</string>
  <string name="app_name_load">Wi De Ya (LOAD)</string>
  <string name="app_name_local">Wi De Ya (LOCAL)</string>
  <string name="app_name_demo">Wi De Ya (DEMO)</string>
  <string name="app_name_staging">Wi De Ya (STAGING)</string>
  <string name="action_settings">Settings</string>
  <string name="multiselect_select_all">Select all</string>
  <string name="home_fragment_label">Welcome, User</string>
  <string name="date">Date</string>
  <string name="complete">Complete</string>
  <string name="save">Save</string>
  <string name="ok">OK</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <string name="dismiss">Dismiss</string>
  <string name="clear">Clear</string>
  <string name="delete">Delete</string>
  <string name="submit">Submit</string>
  <string name="send">Send</string>
  <string name="none">None</string>
  <string name="na">N/A</string>
  <string name="percentage">%d%%</string>
  <string name="divide">%d/%d</string>
  <string name="wideya_url">https://wideya.org</string>
  <string name="login_fragment_label"/>
  <string name="reset_requests_list_fragment_label"/>
  <string name="reset_password_request_fragment_label"/>
  <string name="sign_in_to_continue">Sign in to continue</string>
  <string name="reset_password">Forgotten your password?</string>
  <string name="logout">Logout</string>
  <string name="confirm_logout_message">Are you sure you want to log out?</string>
  <string name="email_username">Email or Username</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="new_password">New Password</string>
  <string name="confirm_password">Confirm New Password</string>
  <string name="sign_in">Sign In</string>
  <string name="register_now">Register New Account</string>
  <string name="request_reset">Submit Request</string>
  <string name="request_title">By %s at %s</string>
  <string name="request_status">Status: %s</string>
  <string name="request_remarks">Remarks: %s</string>
  <string name="request_success_dialog_title">Request Sent</string>
  <string name="request_success_dialog_message">
    This request will need to be approved by your designated member of
    District Staff (e.g. TSC IT Officer or MBSSE SQAO),
    so please contact them and give your username so they can approve your request.</string>
  <string name="request_cancel_confirm_message">
    Are you sure you want to cancel the password reset request?</string>
  <string name="request_list_title">Password Reset</string>
  <string name="request_list_info">
    If you have forgotten your password, you can submit a request to reset your password.
    Submitting this form requires internet access, so please ensure you are connected to the internet.

    \n\nThis request will need to be approved by your designated member of District Staff (e.g. TSC IT Officer or MBSSE SQAO),
    so after submitting please contact them and give your username so they can approve your request.

    \n\nOnce you have submitted a password reset request, you will be able to track its status below.

    \n\nYou may also cancel the request yourself, if you later remember your password.
  </string>
  <string name="request_button">Request A Password Reset</string>
  <string name="request_heading_status_existing">Status of Existing Requests:</string>
  <string name="today">Today</string>
  <string name="next_day">Next Day</string>
  <string name="next_week">Next Week</string>
  <string name="previous_day">Previous Day</string>
  <string name="previous_week">Previous Week</string>
  <string name="camera_fragment_label">Camera</string>
  <string name="camera_retake">Retake</string>
  <string name="camera_confirm">Confirm</string>
  <string name="scan">Scan</string>
  <string name="rotate">Rotate</string>
  <string name="snap">Snap</string>
  <string name="photo_fragment_label">Photo Viewer</string>
  <string name="request_camera_permission">The application requires access to the camera
    in order to function properly</string>
  <string name="camera_overlay_guide">Face should fill the outlined area</string>
  <string name="camera_denied_title">Camera Permission Denied</string>
  <string name="camera_denied_message">This app does not have permission to use your phone\'s camera.
    Please grant permission from Settings and try again.</string>
  <string name="sync_fragement_label">Sync</string>
  <string name="settings_fragement_label">Settings</string>
  <string name="dialog_title">Are you sure?</string>
  <string name="dialog_settings">Settings</string>
  <string name="dialog_discard">Discard any changes made</string>
  <string name="dialog_delete">This will delete the selected entry</string>
  <string name="permission_allow">Allow</string>
  <string name="permission_deny">Deny</string>
  <string name="request_notification_permission">This app requires notifications to be enabled
    to show sync updates when app is running in the background</string>
  <string name="request_location_permission">This app requires access to location data
    in order to function properly</string>
  <string name="enable_gps">Please enable GPS on your device</string>
  <string name="location">Location</string>
  <string name="saved_location">Last Saved Location: \n%s, %s\n\nLast Updated: %s</string>
  <string name="location_debug">Show Last Saved Location</string>
  <string name="incorrect_device_date">Incorrect Device Date</string>
  <string name="incorrect_device_date_subtitle_max_attendance_date">
    Please set your device to the correct date to continue.
    \nYour device date cannot be before your latest attendance report date.
  </string>
  <string name="school_list_fragment_label">My School List</string>
  <string name="school_profile_fragment_label">School Profile</string>
  <string name="school_profile_details_fragment_label">School Profile Details</string>
  <string name="school_timetable_fragment_label">School Timetable</string>
  <string name="school_analysis_fragment_label">School Analysis</string>
  <string name="school_details">School Details</string>
  <string name="school_timetable">Timetable</string>
  <string name="school_name">School Name</string>
  <string name="education_level">Education Level</string>
  <string name="emis_id">EMIS ID</string>
  <string name="payroll_sid">Payroll SID</string>
  <string name="waec_id">WAEC ID</string>
  <string name="district_office">District Office</string>
  <string name="chiefdom">Chiefdom</string>
  <string name="section">Section</string>
  <string name="town">Town</string>
  <string name="school_address">School Address</string>
  <string name="adding_new_school">Add New School</string>
  <string name="school_timetable_title">School Weekly Timetable</string>
  <string name="empty_school_timetable">No timetable found for this school</string>
  <string name="period_placeholder">------</string>
  <string name="teacher_profile_fragment_label">Teacher Profile</string>
  <string name="teacher_profile_details_fragment_label">Teacher Profile Details</string>
  <string name="teacher_payroll_list_fragment_label">Add New Teacher from Payroll</string>
  <string name="teacher_non_payroll_list_fragment_label">Add Non-Payroll Teacher</string>
  <string name="teacher_remove_fragment_label">Remove Teacher</string>
  <string name="teacher_attendance_fragment_label">Teacher Attendance</string>
  <string name="teacher_personal_details">Teacher Personal Details</string>
  <string name="nassit_number">NASSIT Number</string>
  <string name="teacher_employment_details">Teacher Employment Details</string>
  <string name="employment_status">Employment Status</string>
  <string name="pin_code">PIN Code</string>
  <string name="teacher_role">Teacher Role</string>
  <string name="teaching_at_this_school_since">Teaching at THIS school since..?</string>
  <string name="teacher_left_school">Teacher Left School</string>
  <string name="contact_details">Contact Details</string>
  <string name="present">Present</string>
  <string name="on_time">On Time</string>
  <string name="late">Late</string>
  <string name="half_day">Half Day</string>
  <string name="absent">Absent</string>
  <string name="not_reported">Not Reported</string>
  <string name="not_submitted">Not Submitted</string>
  <string name="attendance_title">%s - Teacher Attendance</string>
  <string name="photo_verification">Photo Verification</string>
  <string name="fingerprint_verification">Fingerprint Verification</string>
  <string name="no_fingerprints_registered">No Fingerprints Registered</string>
  <string name="no_profile_photo_registered">No Profile Photo Registered</string>
  <string name="warning_low_quality">Low quality: Please try again</string>
  <string name="warning_lowest_quality">Lowest quality: Please try again</string>
  <string name="error_scanning_finger">Error scanning finger: Please try again</string>
  <string name="fingerprint_verified">Fingerprint verified</string>
  <string name="error_no_match">No match: Please try again</string>
  <string name="guide_scanning_finger">Scanning fingerprint… %skeep finger on scanner</string>
  <string name="fingerprints">Fingerprints</string>
  <string name="left_index">Left Index</string>
  <string name="left_thumb">Left Thumb</string>
  <string name="right_thumb">Right Thumb</string>
  <string name="right_index">Right Index</string>
  <string name="submit_teacher_attendance_title">Submit Teacher Attendance</string>
  <string name="submit_attendance_message">
    This attendance sheet is complete, do you want to submit it?
    After submitting, all further edits for today will be automatically resubmitted.
  </string>
  <string name="teacher_timetable_fragment_label">Teacher Timetable</string>
  <string name="teacher_timetable_title">Teacher Weekly Timetable: %s, %s</string>
  <string name="empty_teacher_timetable">No timetable found for this teacher</string>
  <string name="subject">Subject</string>
  <string name="subject_other">Other Subject</string>
  <string name="day">Day</string>
  <string name="end_time">End Time</string>
  <string name="start_time">Start Time</string>
  <string name="timetable_entry_title">%s Timetable Entry</string>
  <string name="add">Add</string>
  <string name="edit">Edit</string>
  <string name="edit_remove">Edit/Remove</string>
  <string name="overlap_entry_title">Error: Time Overlap</string>
  <string name="overlap_entry_message">The time of this lesson overlaps with an existing one.
    \nPlease edit times before saving.</string>
  <string name="add_new_lesson">+ ADD NEW LESSON</string>
  <string name="learner_profile_fragment_label">Learner Profile</string>
  <string name="learner_profile_details_fragment_label">Learner Profile Details</string>
  <string name="learner_remove_fragment_label">Remove Learner</string>
  <string name="assign_learner_to_class">Please assign this learner to a classroom</string>
  <string name="unassigned_learners_fragment_label">Unassigned Learners</string>
  <string name="unassigned_learners_fragment_explanation_text">
    Select unassigned learners that you wish to assign to classroom.
    Use the square checkboxes to tick the learners you want to include.</string>
  <string name="learner_remove_from_group">Unassign selected learners from this class?</string>
  <string name="learner_transfer_to_other_group">Transfer selected learners to another class?</string>
  <string name="learner_assign_to_current_group">Assign selected learners to current class?</string>
  <string name="learner_attendance_fragment_label">Learner Attendance</string>
  <string name="school_group_profile_fragment_label">Classroom Profile</string>
  <string name="school_group_profile_details_fragment_label">Classroom Profile Details</string>
  <string name="learner_search_fragment_label">Search Learner</string>
</resources>