<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@android:color/white"
  android:padding="20dp">

  <ImageView
    android:id="@+id/iv_img_portrait"
    android:layout_width="120dp"
    android:layout_height="120dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_person"
    tools:ignore="ContentDescription" />

  <Button
    android:id="@+id/btn_img_snap"
    style="?attr/materialIconButtonFilledTonalStyle"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/blue_mid"
    android:text="@string/snap"
    app:icon="@android:drawable/ic_menu_camera"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_img_portrait" />

  <Button
    android:id="@+id/btn_img_rotate"
    style="?attr/materialIconButtonFilledTonalStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/md_theme_dark_tertiary"
    android:text="@string/rotate"
    android:visibility="gone"
    app:icon="@android:drawable/ic_menu_rotate"
    app:layout_constraintEnd_toStartOf="@id/btn_img_remove"
    app:layout_constraintStart_toStartOf="@id/btn_img_snap"
    app:layout_constraintTop_toBottomOf="@id/btn_img_snap"
    tools:visibility="visible" />

  <Button
    android:id="@+id/btn_img_remove"
    style="?attr/materialIconButtonFilledTonalStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/red_mid"
    android:text="@string/delete"
    android:visibility="gone"
    app:icon="@android:drawable/ic_menu_delete"
    app:layout_constraintEnd_toEndOf="@id/btn_img_snap"
    app:layout_constraintStart_toEndOf="@id/btn_img_rotate"
    app:layout_constraintTop_toTopOf="@id/btn_img_rotate"
    tools:visibility="visible" />

  <View
    android:id="@+id/v_separator"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginTop="10dp"
    android:background="@color/grey_300"
    app:layout_constraintTop_toBottomOf="@id/btn_img_rotate" />

  <Button
    android:id="@+id/btn_img_cancel"
    style="?attr/materialIconButtonFilledTonalStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/purple_faint"
    android:text="@string/cancel"
    app:icon="@android:drawable/ic_menu_close_clear_cancel"
    app:layout_constraintEnd_toStartOf="@id/btn_img_confirm"
    app:layout_constraintStart_toStartOf="@id/btn_img_snap"
    app:layout_constraintTop_toBottomOf="@id/v_separator" />

  <Button
    android:id="@+id/btn_img_confirm"
    style="?attr/materialIconButtonFilledTonalStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/green_mid"
    android:text="@string/save"
    android:visibility="gone"
    app:icon="@android:drawable/ic_menu_save"
    app:layout_constraintEnd_toEndOf="@id/btn_img_snap"
    app:layout_constraintStart_toEndOf="@id/btn_img_cancel"
    app:layout_constraintTop_toTopOf="@id/btn_img_cancel"
    tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>